--- a/static/blank.html
+++ b/static/blank.html
@@ -1,6 +1,6 @@
 <head>
-    <script src = "static/jquery-3.2.1.min.js"></script>
-    <script src = "static/helper.js"></script>
+    <script src = "static/js/jquery-3.2.1.min.js"></script>
+    <script src = "static/js/helper.js"></script>
 </head>
 <body>
     <canvas id = "place-canvas"></canvas>
