Made canvas update on startup

--- a/static/blank.html
+++ b/static/blank.html
@@ -3,5 +3,5 @@
     <script src = "static/js/helper.js"></script>
 </head>
 <body>
-    <canvas id = "place-canvas"></canvas>
+    <canvas id = "canvas"></canvas>
 </body>
