Renamed some files, started colorpicker

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <head>
     <script src = "static/js/jquery-3.2.1.min.js"></script>
-    <script src = "static/js/helper.js"></script>
+    <script src = "static/js/jscolor.js"></script>
+    <script src = "static/js/index.js"></script>
 </head>
 <body>
     <canvas id = "canvas"></canvas>
