--- a/static/index.html
+++ b/static/index.html
@@ -7,15 +7,17 @@
 
     <link rel="stylesheet" type="text/css" href="static/style.css">
 
-    <script src = "static/js/jquery-3.2.1.min.js"></script>
-    <script src = "static/js/jscolor.js"></script>
-    <script src = "static/js/index.js"></script>
+    <script src="static/js/jquery-3.2.1.min.js"></script>
+    <script src="static/js/jscolor.js"></script>
+    <script src="static/js/index.js"></script>
 </head>
 <body>
-    <canvas id = "canvas"></canvas>
+    <canvas id="canvas"></canvas>
     <button id="colorpicker" class="jscolor {width:300, height:200, valueElement:'chosenValue', onFineChange:'choose_color(\'#\' + this.toString())'}">
         Choose Color
     </button>
+    <button id="plus" class="zoombutton">+</button>
+    <button id="minus" class="zoombutton">-</button>
 </body>
 
 </html>
