Added image for back button

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
     <button id="colorpicker" class="jscolor {width:300, height:200, valueElement:'chosenValue', onFineChange:'choose_color(\'#\' + this.toString())'}">
         Choose Color
     </button>
-    <button id="back">Back</button>
+    <button id="back"><img src="static/back-arrow.png" style="width:40px;height:40px;"></button>
     <button id="plus" class="zoombutton">+</button>
     <button id="minus" class="zoombutton">-</button>
 </body>
