--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,11 @@
 <head>
     <title>Place Clone</title>
 
-    <link rel="stylesheet" type="text/css" href="static/style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
 
-    <script src="static/js/jquery-3.2.1.min.js"></script>
-    <script src="static/js/jscolor.js"></script>
-    <script src="static/js/index.js"></script>
+    <script src="/static/js/jquery-3.2.1.min.js"></script>
+    <script src="/static/js/jscolor.js"></script>
+    <script src="/static/js/index.js"></script>
 </head>
 <body>
     <canvas id="canvas"></canvas>
